--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,20 @@
     <modules>
         <module>spring-boot-hello</module>
     </modules>
-
+    <!--alibaba nexus-->
+    <repositories>
+            <repository>
+                <id>alimaven</id>
+                <name>Maven Aliyun Mirror</name>
+                <url>http://maven.aliyun.com/nexus/content/repositories/central/</url>
+                <releases>
+                    <enabled>true</enabled>
+                </releases>
+                <snapshots>
+                    <enabled>false</enabled>
+                </snapshots>
+            </repository>
+    </repositories>
     <build>
         <plugins>
             <plugin>
