feat:mybatis 分页实现-pageHelper ,自定义拦截器实现

--- a/spring-boot-mybatis/pom.xml
+++ b/spring-boot-mybatis/pom.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--suppress ALL -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -12,7 +13,7 @@
     <artifactId>spring-boot-mybatis</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>spring-boot-mybatis</name>
-    <description>Demo project for Spring Boot</description>
+    <description>mybatis project for Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -63,6 +64,22 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <!-- maven默认不编译xml文件，需要增加此配置来支持编译xml文件，否则会导致mapper包下的*Mapper.xml没有编译过去  -->
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.yaml</include>
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+        </resources>
     </build>
 
 </project>
