--- a/spring-boot-mybatis/src/main/resources/application.yaml
+++ b/spring-boot-mybatis/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://10.1.20.11:3306/wypt_xuty?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
     username: root
-    password: 123456
+    password: JJ_passwd@2017
     driver-class-name: com.mysql.cj.jdbc.Driver
 pagehelper:
   helper-dialect: mysql
@@ -12,12 +12,14 @@ pagehelper:
   reasonable: false
   support-methods-arguments: true
   params: count=countSql
+# å¸¦logå‰ç¼€çš„SQLæ‰“å°è¾“å‡º
+#logging:
+#  level:
+#    cn.xutingyin.mybatis.mapper: debug
 
-# sql Êä³ö·½°¸2
-logging:
-  pattern:
-    console: '%d -%msg%n'
-  file:
-    path: ./error.log
-  level:
-    root: debug
+#mybatis SQLè¯­å¥æ‰“å°
+mybatis:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+server:
+  port: 8081
