--- a/spring-boot-activiti/src/main/resources/application.yaml
+++ b/spring-boot-activiti/src/main/resources/application.yaml
@@ -1,2 +1,13 @@
 server:
   port: 8001
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/activiti?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  activiti:
+    db-history-used: true
+    check-process-definitions: true  #自动检查、部署流程定义文件
+    database-schema-update: "true" #自动更新数据库
+    process-definition-location-prefix: classpath:/processes/
