--- a/spring-boot-rabbitmq/src/main/resources/application.yaml
+++ b/spring-boot-rabbitmq/src/main/resources/application.yaml
@@ -4,5 +4,5 @@ spring:
   rabbitmq:
     host: localhost
     port: 15672
-    username: guest
-    password: guest
+    username: admin
+    password: admin
