--- a/spring-boot-rocketmq/pom.xml
+++ b/spring-boot-rocketmq/pom.xml
@@ -62,6 +62,11 @@
             <version>2.3.1.RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.transaction</groupId>
+            <artifactId>javax.transaction-api</artifactId>
+            <version>1.3</version>
+        </dependency>
     </dependencies>
 
     <build>
