--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>spring-boot-hello</module>
         <module>nacos-spring-demo</module>
+        <module>spring-boot-seat-at</module>
     </modules>
     <!--alibaba nexus-->
     <repositories>
