--- a/spring-boot-seat-at/account-service/pom.xml
+++ b/spring-boot-seat-at/account-service/pom.xml
@@ -30,6 +30,12 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.1.10</version>
