--- a/spring-boot-seat-at/order-service/src/main/resources/application.yml
+++ b/spring-boot-seat-at/order-service/src/main/resources/application.yml
@@ -1,15 +1,15 @@
 server:
-  port: 8083
+  port: 8082
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://10.1.5.81:3306/db_account?useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://10.1.5.81:3306/db_order?useSSL=false&serverTimezone=UTC
     username: root
     password: 123456
 seata:
   enabled: true
-  application-id: account-service
+  application-id: order-service
   tx-service-group: my_test_tx_group
   #enable-auto-data-source-proxy: true
   #use-jdk-proxy: false
