fix:添加文件说明

--- a/spring-boot-elasticsearch/src/main/resources/application.properties
+++ b/spring-boot-elasticsearch/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-elasticsearch.hostname=127.0.0.1
-elasticsearch.port=9200
+elasticsearch.master.host=127.0.0.1
+elasticsearch.master.port=9200
+elasticsearch.slave1.host=127.0.0.1
+elasticsearch.slave1.port=9210
+elasticsearch.slave2.host=127.0.0.1
+elasticsearch.slave2.port=9220
 elasticsearch.scheme=http
 spring.data.elasticsearch.client.reactive.connection-timeout=3000
