fix : 修改配置文件

--- a/spring-base-annotation/src/main/webapp/WEB-INF/web.xml
+++ b/spring-base-annotation/src/main/webapp/WEB-INF/web.xml
@@ -3,15 +3,21 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
+    <!--指定WEB应用在启动时载入IOC容器，这样就能使用WebApplicationContext中的各种组件-->
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
+    <!-- contextConfigLocation参数用来指定Spring的配置文件 -->
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>classpath*:spring/springmvc-config.xml</param-value>
+    </context-param>
     <servlet>
         <servlet-name>dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>WEB-INF/applicationContext.xml</param-value>
+            <param-value>classpath*:spring/springmvc-config.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
         <async-supported>true</async-supported>
