--- a/spring-boot-hello/pom.xml
+++ b/spring-boot-hello/pom.xml
@@ -34,6 +34,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.18</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
