--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,14 @@
     <groupId>cn.xutingyin</groupId>
     <artifactId>spring-boot-learning</artifactId>
     <version>1.0.1-RELEASE</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>2.3.0.RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
     <packaging>pom</packaging>
 
     <properties>
@@ -15,7 +23,6 @@
     <modules>
         <module>spring-boot-hello</module>
         <module>spring-boot-seat-at</module>
-        <module>spring-base</module>
     </modules>
     <!--alibaba nexus-->
     <repositories>
